travis: Make use of precompiled llvm.a package to speed up build.
ref: mewbuild/travis@ee65ea458f531379fbbcd47b1b0bc6b90c307dd2

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
     - PATH=$HOME/gopath/bin:$PATH
 
 before_install:
+  - mkdir -p $HOME/gopath/pkg/linux_amd64/llvm.org/llvm/bindings/go
+  - wget -O $HOME/gopath/pkg/linux_amd64/llvm.org/llvm/bindings/go/llvm.a https://raw.githubusercontent.com/mewbuild/travis/master/linux_amd64/llvm.org/llvm/bindings/go/llvm.a
   - go get golang.org/x/tools/cmd/cover
   - go get golang.org/x/tools/cmd/goimports
   - go get golang.org/x/tools/cmd/vet
