--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - PATH=$HOME/gopath/bin:$PATH
 
 before_install:
+  - sudo apt-get install -qq llvm-3.6
   - mkdir -p $HOME/gopath/pkg/linux_amd64/llvm.org/llvm/bindings/go
   - wget -O $HOME/gopath/pkg/linux_amd64/llvm.org/llvm/bindings/go/llvm.a https://raw.githubusercontent.com/mewbuild/travis/master/linux_amd64/llvm.org/llvm/bindings/go/llvm.a
   - go get golang.org/x/tools/cmd/cover
