--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main' >> /etc/apt/sources.list"
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -qq
-  - sudo apt-get install -qq llvm-3.6
+  - sudo apt-get install -y llvm-3.6
 
   # Precompiled copy of llvm.org/llvm/bindings/go/llvm with the unnamed.patch [1].
   #
