--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo apt-add-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main'
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -qq
-  - sudo apt-get install -y libstdc++6 llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
+  - sudo apt-get install -y --force-yes libstdc++6 llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
 
   # Precompiled copy of llvm.org/llvm/bindings/go/llvm with the unnamed.patch [1].
   #
