--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ env:
 before_install:
   # LLVM 3.6
   - sudo apt-add-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main'
+  - sudo apt-add-repository -y 'deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main'
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -qq
-  - sudo apt-get install -y --force-yes libstdc++6 llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
+  - sudo apt-get install -y llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
 
   # Precompiled copy of llvm.org/llvm/bindings/go/llvm with the unnamed.patch [1].
   #
