--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ before_install:
   - sudo apt-get install -y llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
 
   # Install gcc 4.7
-  - sudo apt-add-repository -y 'deb http://ppa.launchpad.net/steven-lang/gcc-4.7/ubuntu precise main'
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -y gcc-4.7
+  - sudo apt-get install -qq gcc-4.8
+  - sudo apt-get install -qq g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
 
   # Download and build the source code of LLVM 3.6
   - mkdir -p $HOME/gopath/src/llvm.org/
