--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,16 @@ env:
     - PATH=$HOME/gopath/bin:$PATH
 
 before_install:
-  # Install GCC 4.7
+  # Install GCC 4.8
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-4.7 g++-4.7
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 90
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 90
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.7" CC="gcc-4.7"; fi
+  - sudo update-alternatives --remove-all gcc
+  - sudo update-alternatives --remove-all g++
+  - sudo apt-get install -qq gcc-4.8 g++-4.8
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 20
+  - sudo update-alternatives --config gcc
+  - sudo update-alternatives --config g++
 
   # Install LLVM 3.6
   - sudo apt-add-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main'
