--- a/.travis.yml
+++ b/.travis.yml
@@ -8,23 +8,18 @@ env:
     - PATH=$HOME/gopath/bin:$PATH
 
 before_install:
-  # Install GCC 4.8
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-  - sudo update-alternatives --remove-all gcc
-  - sudo update-alternatives --remove-all g++
-  - sudo apt-get install -qq gcc-4.8 g++-4.8
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 20
-  - sudo update-alternatives --config gcc
-  - sudo update-alternatives --config g++
-
   # Install LLVM 3.6
   - sudo apt-add-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main'
   - sudo apt-add-repository -y 'deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main'
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get install -y llvm-3.6-runtime libllvm3.6 llvm-3.6 llvm-3.6-dev
+
+  # Install GCC 4.8
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq gcc-4.8 g++-4.8
+  - export CXX="g++-4.8" CC="gcc-4.8"
 
   # Download and build the source code of LLVM 3.6
   - mkdir -p $HOME/gopath/src/llvm.org/
